// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dynadux Dispatch sync actions: After remove of 302 todo 1`] = `
Object {
  "logged": true,
  "stats": Object {
    "all": 1,
    "completed": 0,
    "pending": 0,
  },
  "todos": Array [
    Object {
      "done": false,
      "id": "301",
      "label": "Before work beers",
    },
  ],
}
`;

exports[`Dynadux Dispatch sync actions: First todos 1`] = `
Object {
  "logged": true,
  "stats": Object {
    "all": 2,
    "completed": 0,
    "pending": 0,
  },
  "todos": Array [
    Object {
      "done": false,
      "id": "301",
      "label": "Before work beers",
    },
    Object {
      "done": false,
      "id": "302",
      "label": "After work beers",
    },
  ],
}
`;

exports[`Dynadux Dispatch sync actions: Initial state 1`] = `
Object {
  "logged": false,
  "stats": Object {
    "all": 0,
    "completed": 0,
    "pending": 0,
  },
  "todos": Array [],
}
`;
